--- a/.github/workflows/deplo.yml
+++ b/.github/workflows/deplo.yml
@@ -4,17 +4,21 @@ on:
   push:
     branches:
       - main
+
   workflow_dispatch:
     inputs:
       environment:
-        description: 'Choose environment'
+        description: "Choose environment"
         required: true
-        default: 'dev'
+        default: dev
         type: choice
         options:
           - dev
           - staging
           - prod
+
+env:
+  AWS_REGION: ap-southeast-2
 
 jobs:
   terraform-and-deploy:
@@ -26,12 +30,12 @@ jobs:
         uses: actions/checkout@v3
 
       # 2. Configure AWS credentials
-      - name: Configure AWS
+      - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ap-southeast-2
+          aws-region: ${{ env.AWS_REGION }}
 
       # 3. Setup Terraform
       - name: Setup Terraform
@@ -39,42 +43,50 @@ jobs:
         with:
           terraform_version: 1.6.0
 
-      # 4. Initialize Terraform
+      # 4. Terraform Init
       - name: Terraform Init
         working-directory: infra
         run: terraform init -reconfigure
 
-      # 5. Select or create workspace
+      # 5. Select or Create Workspace
       - name: Terraform Workspace
         working-directory: infra
         run: |
-          TERRAFORM_WORKSPACE=${{ github.event.inputs.environment }}
+          ENVIRONMENT="${{ github.event.inputs.environment || 'dev' }}"
+          echo "Using environment: $ENVIRONMENT"
+
           terraform workspace list
-          terraform workspace select $TERRAFORM_WORKSPACE || terraform workspace new $TERRAFORM_WORKSPACE
+          terraform workspace select "$ENVIRONMENT" || terraform workspace new "$ENVIRONMENT"
+
+          echo "TF_ENV=$ENVIRONMENT" >> $GITHUB_ENV
 
       # 6. Terraform Plan
       - name: Terraform Plan
         working-directory: infra
         run: |
-          TERRAFORM_WORKSPACE=${{ github.event.inputs.environment }}
-          terraform plan -var-file="${TERRAFORM_WORKSPACE}.auto.tfvars"
+          terraform plan -var-file="${TF_ENV}.auto.tfvars"
 
       # 7. Terraform Apply
       - name: Terraform Apply
         working-directory: infra
         run: |
-          TERRAFORM_WORKSPACE=${{ github.event.inputs.environment }}
-          terraform apply -auto-approve -var-file="${TERRAFORM_WORKSPACE}.auto.tfvars"
+          terraform apply -auto-approve -var-file="${TF_ENV}.auto.tfvars"
 
-      # 8. Configure kubectl
-      - name: Configure kubectl
+      # 8. Get EKS Cluster Name from Terraform
+      - name: Get EKS Cluster Name
         working-directory: infra
         run: |
-          CLUSTER_NAME=$(terraform output -raw cluster_name)
-          aws eks update-kubeconfig --name $CLUSTER_NAME --region ap-southeast-2
+          echo "CLUSTER_NAME=$(terraform output -raw cluster_name)" >> $GITHUB_ENV
 
-      # 9. Apply Kubernetes manifests
-      - name: Deploy K8s Manifests
+      # 9. Configure kubectl
+      - name: Configure kubectl
+        run: |
+          aws eks update-kubeconfig \
+            --name $CLUSTER_NAME \
+            --region $AWS_REGION
+
+      # 10. Deploy Kubernetes manifests
+      - name: Deploy Application to EKS
         run: |
           kubectl apply -f k8s/namespace.yaml
           kubectl apply -f k8s/configmap.yaml
@@ -84,7 +96,7 @@ jobs:
           kubectl apply -f k8s/ingress.yaml
           kubectl apply -f k8s/hpa.yaml
 
-      # 10. Apply Fluentd logging
+      # 11. Deploy Fluentd Logging
       - name: Deploy Fluentd Logging
         run: |
           kubectl apply -f logging/fluentd/namespace.yaml
