--- a/.github/workflows/deplo.yml
+++ b/.github/workflows/deplo.yml
@@ -90,7 +90,7 @@ jobs:
       - name: Deploy Application to EKS
         run: |
           kubectl apply -f k8s/namespace.yaml
-          kubectl apply -f k8s/configmap.yaml
+          kubectl apply -f k8s/config.yaml
           kubectl apply -f k8s/secret.yaml
           kubectl apply -f k8s/deployment.yaml
           kubectl apply -f k8s/service.yaml
