--- a/logging/fluentd/fluentd-configmap.yaml
+++ b/logging/fluentd/fluentd-configmap.yaml
@@ -8,11 +8,16 @@ data:
     <source>
       @type tail
       path /var/log/containers/*.log
-      pos_file /var/log/fluentd-containers.log.pos
+      pos_file /fluentd/log/fluentd-containers.log.pos
       tag kubernetes.*
-      format json
+      read_from_head true
+      <parse>
+        @type json
+        time_key time
+        time_format %Y-%m-%dT%H:%M:%S.%N%z
+      </parse>
     </source>
 
-    <match kubernetes.**>
+    <match **>
       @type stdout
     </match>
