--- a/logging/fluentd/fluentd-daemonset.yaml
+++ b/logging/fluentd/fluentd-daemonset.yaml
@@ -13,18 +13,31 @@ spec:
         app: fluentd
     spec:
       serviceAccountName: fluentd
+      tolerations:
+        - operator: Exists
+
       containers:
         - name: fluentd
           image: fluent/fluentd:v1.15-debian-1
+          env:
+            - name: FLUENTD_CONF
+              value: fluent.conf
+
           volumeMounts:
             - name: varlog
               mountPath: /var/log
-            - name: config
-              mountPath: /fluentd/etc
+            - name: containers
+              mountPath: /var/lib/docker/containers
+              readOnly: true
+            - name: fluentd-pos
+              mountPath: /fluentd/log
+
       volumes:
         - name: varlog
           hostPath:
             path: /var/log
-        - name: config
-          configMap:
-            name: fluentd-config
+        - name: containers
+          hostPath:
+            path: /var/lib/docker/containers
+        - name: fluentd-pos
+          emptyDir: {}
